-------------------------------
Version 0.3-dev-?????????
-------------------------------
* using QScintilla instead of QTextEdit;


===============================
Version 0.2-release
===============================
* Added: move to the next/previous marker;
* Fixed: opening in existing instance using relative file 
  names in console;
* Fixed: regression in beta3 with multi-line blocks highlighting;


-------------------------------
Version 0.2-beta3
-------------------------------
* Changed: opening new file now replaces empty unchanged document, if it
  is the only one which is opened at that momend;
* Fixed: crash when exiting (appeared with some versions of Qt);
* Fixed: "open in existing instance" now isn't visible on Windows (since 
  this functionality is unavailable);
* Misc: filled up translations;


-------------------------------
Version 0.2-beta2
-------------------------------
* Added: Close button to About dialog;
* Fixed: can't be compiled on Windows (closing of IPC 
  socket isn't isolated);
* Fixed: window title doesn't change properly after "Save 
  session as" action;


-------------------------------
Version 0.2-beta1
-------------------------------
* Added: option "Save as a copy" to "Save as" dialog;
* Added: notification of changing file by external program;
* Added: using existing instance of application for opening files;
* Added: French and Spanish localizations;
* Added: license to "About" dialog;
* Changed: Settings dialog was reorganized a bit;


-------------------------------
Version 0.2-dev-20080311
-------------------------------
* Changed: Some improvements in Makefile;
* Fixed: regression with opening files;
* Fixed: regression with closing tab with any button;


-------------------------------
Version 0.2-dev-20080310
-------------------------------
* Added: line markers;
* Added: opening of multiple files with "Open file" dialog and 
  command line;
* Added: line length indicator;
* Added: auto-saving option;